--- a/www/src/js/views/components/ColorPicker.scss
+++ b/www/src/js/views/components/ColorPicker.scss
@@ -23,7 +23,7 @@ $arrow-height: 1.5rem;
 
 .palette {
   position: absolute;
-  z-index: 1;
+  z-index: $zindex-dropdown;
   display: flex;
   flex-wrap: wrap;
   width: $width;
@@ -48,6 +48,12 @@ $arrow-height: 1.5rem;
     border-left-color: transparent;
   }
 
+  // Override .btn styles
+  > .option {
+    border: 0;
+    border-radius: 0;
+  }
+
   @include media-breakpoint-down(sm) {
     left: $width/2 - $arrow-width;
 
@@ -58,9 +64,8 @@ $arrow-height: 1.5rem;
 }
 
 .option {
-  display: inline-block;
+  composes: btn from global;
   width: $size;
   height: $size;
   margin-bottom: $margin-bottom;
-  cursor: pointer;
 }
